--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
 	],
 	"require": {
 		"php": "7.4 - 8.2",
-		"latte/latte": "^2.4",
-		"nette/di": "^2.4",
+		"latte/latte": "^2.9",
+		"nette/di": "^2.4.16",
+		"nette/utils": "^2.5.5 || ^3.0 || ^4.0",
 		"phig/phig": "^1.2"
 	},
 	"autoload": {
@@ -23,5 +24,8 @@
 	},
 	"require-dev": {
 		"nette/tester": "^2.4"
+	},
+	"conflict": {
+		"nette/php-generator": "<3.0"
 	}
 }
