--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
 	],
 	"require": {
 		"php": "7.4 - 8.2",
-		"latte/latte": "^2.9",
-		"nette/di": "^2.4.16",
+		"latte/latte": "^2.9 || ^3.0",
+		"nette/di": "^2.4.16 || ^3.0",
 		"nette/utils": "^2.5.5 || ^3.0 || ^4.0",
 		"phig/phig": "^1.2"
 	},
