--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
 	"require": {
 		"php": "8.0 - 8.2",
 		"latte/latte": "^2.9",
-		"nette/di": "^2.4.16",
-		"nette/utils": "^2.5.5 || ^3.0 || ^4.0",
+		"nette/di": "^3.0.6",
+		"nette/utils": "^3.0 || ^4.0",
 		"phig/phig": "^1.2"
 	},
 	"autoload": {
